<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/kotak_masuk"
            android:title="@string/semua_kotak_masuk"
            android:icon="@drawable/ic_all_inbox"/>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/utama"
            android:title="@string/utama"
            android:icon="@drawable/ic_inbox"/>
        <item
            android:id="@+id/promosi"
            android:title="@string/promosi"
            android:icon="@drawable/ic_promotion"/>
        <item
            android:id="@+id/social"
            android:title="@string/sosial"
            android:icon="@drawable/ic_sosial_outline"/>
    </group>

    <group
        android:id="@+id/group3">
        <item
            android:id="@+id/allLabels"
            android:title="@string/all_labels">
            <menu>
                <group
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menuStarred"
                        android:title="@string/starred"
                        android:icon="@drawable/ic_star_outline"/>
                    <item
                        android:id="@+id/menuSnoozed"
                        android:title="@string/snoozed"
                        android:icon="@drawable/ic_snoozed"/>
                    <item
                        android:id="@+id/menuImportant"
                        android:title="@string/important"
                        android:icon="@drawable/ic_important"/>
                    <item
                        android:id="@+id/menuSent"
                        android:title="@string/sent"
                        android:icon="@drawable/ic_sent"/>
                    <item
                        android:id="@+id/menuScheduled"
                        android:title="@string/scheduled"
                        android:icon="@drawable/ic_schedule"/>
                    <item
                        android:id="@+id/menuOutbox"
                        android:title="@string/outbox"
                        android:icon="@drawable/ic_outbox"/>
                    <item
                        android:id="@+id/menuDrafts"
                        android:title="@string/drafts"
                        android:icon="@drawable/ic_drafts"/>
                    <item
                        android:id="@+id/menuAllMails"
                        android:title="@string/all_mail"
                        android:icon="@drawable/ic_allemail"/>
                    <item
                        android:id="@+id/menuSpam"
                        android:title="@string/spam"
                        android:icon="@drawable/ic_spam"/>
                    <item
                        android:id="@+id/menuBin"
                        android:title="@string/bin"
                        android:icon="@drawable/ic_bin"/>
                    <item
                        android:id="@+id/menuJunk"
                        android:title="@string/junk"
                        android:icon="@drawable/ic_junk"/>
                </group>
            </menu>
        </item>

        <item
            android:id="@+id/googleApps"
            android:title="@string/google_apps">
            <menu>
                <group
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/menuCalendar"
                        android:title="@string/calendar"
                        android:icon="@drawable/ic_calendar"/>
                    <item
                        android:id="@+id/menuContacs"
                        android:title="@string/contacts"
                        android:icon="@drawable/ic_contacts"/>
                </group>
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuSettings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>
        <item
            android:id="@+id/menuHelpFeedback"
            android:title="@string/help_and_feedback"
            android:icon="@drawable/ic_help_feedback"/>
    </group>
</menu>